# test_task_6

./: .env.example  .gitignore  README.md  pyproject.toml
src/confidence_voice_agent/: agent.py  app.py  confidence.py  config.py  context.py  providers.py
tests/: test_agent_prompting.py  test_confidence.py  test_config.py  test_context.py  test_provider_errors.py
