[project]
name = "confidence-voice-agent"
version = "0.1.0"
description = "LiveKit voice agent that passes Deepgram STT confidence into LLM context."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[deepgram,elevenlabs,openai,silero]~=1.6",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.3",
]

[project.scripts]
confidence-voice-agent = "confidence_voice_agent.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/confidence_voice_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = false

[[tool.mypy.overrides]]
module = ["livekit.*"]
ignore_missing_imports = true
